Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67708

QGroupBox title does not follow vertical alignment with fusion style

XMLWordPrintable

    • 2e625c55b (dev), 8b567e90b (6.7), 4f43990f7 (6.6)

      QGroupBox title vertical alignment (Qt::AlignVCenter) has no effect with Fusion style.

      This bug is related to QTBUG-49068 .

        1. QTBUG67708.zip
          1 kB
        2. fusiongbxvtitle.jpg
          fusiongbxvtitle.jpg
          36 kB
        3. fusiongbxvtitleclip.jpg
          fusiongbxvtitleclip.jpg
          36 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            iamsergio Sergio Martins
            qznec Ghenady
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes