Fusion style: QGroupBox title vertical alignment

Take vertical alignment into account in QFusionStyle::subControlRect().

Pick-to: 6.7 6.6
Fixes: QTBUG-67708
Change-Id: I9da23a4689565c8dba9fed9ef75d3c640ce77e3f
Reviewed-by: Christian Ehrlicher <ch.ehrlicher@gmx.de>